# whale-space-desktop

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DocLibraryMenu.vue  RecentList.vue  Recents.vue  ThemeToggle.vue  WindowTitleBar.vue
src/layouts/: AppLayout.vue
src/router/: index.ts
src/stores/: app.ts  docs.ts
src/styles/: app.scss
src/types/: doc.ts  docFolder.ts
src/utils/: debounce.ts  docStorage.ts  folderStorage.ts  id.ts  storage.ts  time.ts
src/views/: DocumentsPage.vue  EditorPage.vue  HomePage.vue  KnowledgeBasePage.vue  NotesPage.vue  SettingsPage.vue
