[package]
name = "whale-space-desktop"
version = "0.1.0"
description = "Whale Space Desktop"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.39", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
